--- a/src/main/resources/templates/crear.html
+++ b/src/main/resources/templates/crear.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Crear Persona</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    </head>
+    <head th:replace="plantilla/template::head"></head> <!-- para resumir codigo -->
+    <body>
+        <header th:replace="plantilla/template::header"></header> <!-- para resumir codigo -->
+    
+        
+                   <!-- Esto es un formulario -->
   
                 <div class="container">
-                    <form th:object="${persona}" th:action="@{/save}" method="POST">
+                    <form th:object="${persona}" 
+                          th:action="@{/save}" 
+                          method="POST"                          
+                          >
                         <input type="hidden" th:field="*{id}">
                         <div class="form-group mb-3 row">                           
                             <label  class="col-md-2 col-form-label" for="nombre">Nombre</label>                            
