--- a/src/main/resources/templates/personas.html
+++ b/src/main/resources/templates/personas.html
@@ -25,7 +25,8 @@
                       
                   </form>
             
-            <h1 th:text="${titulo}"></h1>
+            <h1 th:text="${cliente.titulo}"></h1>
+              <h1 th:text="${titulo}"></h1>
             <table class="table table-dark table-striped">
                 <thead class="thead-dark">
                     <tr>
