--- a/src/main/resources/templates/plantilla/template.html
+++ b/src/main/resources/templates/plantilla/template.html
@@ -1,82 +1,69 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 
-<html xmlns:th="http://www.thymeleaf.org"
-  >
-  
     <head th:fragment="head">
-       <title>Mi Tienda</title>
-       <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Mi Tienda</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>    
     </head>
-    
+
     <body>
-        <!-- NAV BAR -->
-        
-        <header th:fragment="header">
-       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+        <!-- NAV BAR -->      
+        <header th:fragment="header">       
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">    
+                <a class="navbar-brand" href="#">Boot Security</a>       
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">  
+                    <ul class="navbar-nav mr-auto">             
+                        <li class="nav-item">                   
+                            <a class="nav-link" href="#" th:href="@{~/index}"><i class="fa fa-home"></i>Home</a>         
+                        </li>                  
+                        <li sec:authorize="isAuthenticated()" class="nav-item">            
+                            <a class="nav-link" href="#" th:href="@{~/profile/index}">Profile</a>       
+                        </li>             
+                        <li sec:authorize="hasRole('ROLE_USER')" class="nav-item">          
+                            <a class="nav-link" href="#" th:href="@{~/admin/index}">User</a>            
+                        </li>           
+                        <li sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_MANAGER')" class="nav-item">       
+                            <a class="nav-link" href="#" th:href="@{~/management/index}">ADMIN</a>          
+                        </li>         
+                    </ul>                
+                    <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/logout}">           
+                        <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">Logout</button>        
+                        <button sec:authorize="isAnonymous()" th:href="@{~/login}" class="btn btn-outline-info my-2 my-sm-0 btn-sm" type="submit">Login</button>                 
+                    </form>           
+                </div>        
+            </nav>      
+        </header>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-       
-    </div>
-</header>
-<div class="container"></div>
 
- <!-- FOOTER -->
- 
- <footer th:fragment="footer" class="bg-dark text-white fixed-bottom">
-     <div> 
-         <p>Copyright Tienda &copy; 2022</p>
-         <a th:with-"urlBuilder-$(T(org.springframework.web.servlet.support.ServletUricomponentsBuilder).fromCurrent Request())" th:href="$(urlBuilder.replaceQueryParam ('lang', 'es').touristring())">ES</a>
 
-<a th:with="urlBuilder-$(T(org.springframework.web.servlet.support.ServletUriComponentsBuilder) fromCurrentRequest())" 
-   th:href="$(urlBuilder.replaceQueryParam('lang', 'en') touriString())">EN</a>
-<a th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}"
-                    th:href="${urlBuilder.replaceQueryParam('lang','es').toUriString()}">ES</a>
-</div>
+        <div class="container"></div>
 
-</footer>
- 
- 
- 
- 
- 
- 
- 
 
-</body>
+        <!-- FOOTER -->
+
+
+
+
+
+
+        <footer th:fragment="footer" class="text-center text-white" style="background-color: #0a4275;"> 
+            <!-- Grid container --> <div class="container p-4 pb-0"> <
+                !-- Section: CTA --> <section class="">
+                    <p class="d-flex justify-content-center align-items-center">
+                        <span class="me-3">Register for free</span> 
+                        <button type="button" class="btn btn-outline-light btn-rounded"> Sign up!
+                        </button> </p> </section> <!-- Section: CTA --> 
+            </div> <!-- Grid container --> <!-- Copyright --> 
+            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2020 Copyright: <a class="text-white" href="https://mdbootstrap.com/">
+
+                </a> </div> <a th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}" th:href="${urlBuilder.replaceQueryParam('lang','es').toUriString()}">ES</a> 
+            <a th:with="urlBuilder=${T(org.springframework.web.servlet.support.ServletUriComponentsBuilder).fromCurrentRequest()}" th:href="${urlBuilder.replaceQueryParam('lang','en').toUriString()}">EN</a> <!-- Copyright --> </footer>
+
+
+    </body>
 
 </html>
